# SPL

./: .gitignore  BUILD_SUMMARY.md  CHANGELOG-v2-fixes.md  CNAME  COMPLETE-SUMMARY.md  FIX-10-SEASON-FILTER.md  FIXES-COMPLETE.md  FantaSPL_V2.2.xlsx  FantaSPL_V2.3.xlsx  Games.ipynb  Games_v_2.0.ipynb  Games_v_3.0.ipynb  PER_CHAMPIONSHIP_SEASONS.md  PHASE_1_2_REPORT.md  Points_Summary_v.0.2.ipynb  QUICK-REFERENCE.md  QUICKSTART.md  README.md  REBUILD.md  SPL_App.ipynb  SPL_Processor.ipynb  SQL_PRACTICE.md  SUPABASE_MODE.md  Styling.ipynb  TASK_COMPLETION_SUMMARY.md  fantasy_insert.sql  games.xlsx  index.html  modern_table.html  modernize_html_table.ipynb  player_summary.html  players_stats.html  players_stats_new.html  points.xlsx  pyproject.toml  sorted_summary.xlsx  styles.css  styles_updated.css  test.ipynb  test.py
Blog/: SPL_2024_explain.html
CODE/: 1_SPL_Processor_v0.3.ipynb  2_Points_Summary_v.0.3.ipynb  3_Player_Clusters_v.0.2.ipynb  4_Fanta_Table.ipynb  Graph_generator.ipynb  Player_Clusters.ipynb  Player_Clusters_v.0.2.ipynb  Points_Summary_v.0.2.ipynb  Points_Summary_v.0.3.ipynb  Points_Summary_v.0.4.ipynb  Points_individual.ipynb  SPL_Processor.ipynb  games.xlsx  players_stats.html  points.xlsx  sorted_summary.xlsx
Docs/: formatted_points_allocation_system.html  styles_points.css
Images/: modified_lion.js  modified_lion_santa.js
Input/: FantaSPL.csv  FantaSPL_V2.3.xlsx
Middleput/: cluster_summary.xlsx  clustered_data.html  clustered_data.xlsx  clustered_data_web.html  fantasy_league_clusters.html  games.xlsx  players_stats.html  points.xlsx  (+7 more)
(+1395 files in other folders)
